extensions/wikia/WikiaLabs/css/wikialabs.scss
@import "../../../../skins/oasis/css/mixins/border-radius";
@import "../../../../skins/oasis/css/mixins/gradient";
@import "../../../../skins/oasis/css/mixins/box-shadow";
@import "../../../../skins/oasis/css/mixins/clearfix";
@import "../../../../skins/oasis/css/core/color";

$toolbox-button: 105px;
$margin-images: 10px;

.WikiaArticle .warningBox {
	background-color: #FFFFCC;
	border: 1px solid #AAAAAA;
	margin: 1em 3em 1em 0;
	padding: 6px;
	width: 100%;
	img {
		margin-top: -4px;
	}
}

.WikiaArticle ul.wikiaLabsMainView {
	list-style: none outside none;
	margin-left: 2px;

	li {
		@include clearfix;
		position: relative;
		padding-bottom: 20px;
		margin-top: 20px;
		border-bottom: 1px solid;
		border-width: 1px;
		border-color:$color-headline-border;
		min-height: 114px;
		.appScreen {
			float: left;
			margin-right: $margin-images;
			border-color: $color-text;
			border: 1px solid;
		}
		.details {
			vertical-align: top;
			padding-right: $toolbox-button + $margin-images;
			display: block;
			.prjname {
				display: block;
				font-size: 20px;
				a {
					font-size: 13px;
				}
				.data {
					font-size: 10px;
					padding-bottom: 4px;
					padding-left: 10px;
				}
			}
		}
		.buttons {
			position: absolute;
			right: 0;
			vertical-align: top;
			border: medium solid;
			top: 0;
			width: $toolbox-button;
			border: none;
			.feedback {
					margin-top: 6px;
					margin-bottom: 6px;
          width: 93px;
          overflow: hidden;
				    img {
				    vertical-align: middle;
					margin-left: -3px;
					    margin-top: -2px;
					padding: 0;
					width: 20px;
					}
			}
			.active {
				display: block;
				font-size: 11px;
				.wikia-button{
					padding-left: 3px;
					cursor :default;
					padding-right: 3px;
					margin-right: 6px;
				}
			}
			.stars {
				padding-left: 2px;
				position: relative;
				display: block;
				margin-top: -5px;
				img {
					background: url("/extensions/wikia/WikiaLabs/images/star-inactive.png") repeat scroll 0 0 transparent; /* $wgCdnStylePath */
					height: 32px;
					width: 32px;
					margin-right: -10px;
					margin-left: -10px;
					&.staractive{
						background: url("/extensions/wikia/WikiaLabs/images/star-active.png") repeat scroll 0 0 transparent; /* $wgCdnStylePath */
					}
				}
				.ratings{
					position: absolute;
					right: 0;
					top: 0;
					display: block;
					float: right;
					font-size: 8px;
					line-height: 8px;
					padding-top: 8px;
					text-align: center;
				}
			}
			.slider {
				background: url(/extensions/wikia/WikiaLabs/images/toggle-bkg-inactive.png); /* $wgCdnStylePath */
				border: medium solid;
				display: block;
				height: 27px;
				width: 109px;
				border: none;
				cursor:pointer;
				&.on {
					background: url(/extensions/wikia/WikiaLabs/images/toggle-bkg-active.png); /* $wgCdnStylePath */
				}
				.texton {
					margin-left: 18px;
					position: absolute;
					top: 2px;
					color: #FFFFFF;
					font-weight: bold;
					display: none;
					&.on {
						display: block;
					}
				}
				.textoff {
					margin-left: 49px;
					position: absolute;
					top: 2px;
					color: #000;
					font-weight: bold;
					&.on {
						display: none;
					}
				}
				.button {
					background: url(/extensions/wikia/WikiaLabs/images/toggle-switch.png); /* $wgCdnStylePath */
					border: none;
					display: block;
					height: 27px;
					padding: 0;
					width: 42px;
					position: absolute;
					z-index: 1;
					&.on {
						left: 67px;
					}
				}
			}
		}
	}
}

.WikiaLabsGraduates {
	h1{
		width: 100%;
		img {
			float: left;
			margin-top: -10px;
			width: 32px;
		}
	}
	.size {
		float: right;
	}
	li {
		@include clearfix;
		padding-bottom: 20px;
		img {
			float: left;
			border: 1px solid;
			height: 80px;
			width: 80px;
		}
		div {
			padding-left: 92px;
			.title {
				display: block;
				font-size: 20px;
				padding-bottom: 3px;
			}
		}
	}
}

.WikiaLabsStaff{
	h1.title {
		display: block;
		position: relative;
		margin-bottom: 0;
	}
	#addProject {
		float: right;
		width: 115px;
	}
	.redinfo {
		color: red;
		font-size: 11px;
		display: block;
	}
	.editinfo {
	 	display: block;
		font-size: 12px;
		margin-top: 23px;
	}
	.prjselect {
		margin-bottom: 20px;
		width: 150px;
	}
	.appScreen {
		width: 80px;
		height: 80px;
	}
}

.addprjmodal {
	#errorBox {
		background-color: #FFFFCC;
		border: 1px solid #AAAAAA;
		display: none;
		margin: 1em 3em 1em 0;
		padding: 6px;
	}
	.label {
		font-weight: bold;
		padding-top: 15px;
		padding-bottom: 3px;
	}
	.input input {
		width:350px;
	}
	.input textarea {
		width:350px;
		height: 100px;
	}
	.input input.checkbox {
		width: 20px;
		margin-left: 0;
	}
	.buttons {
		 padding-top: 24px;
		 button {
		     margin-right: 4px;
		 }
	}
	.image {
		float: right;
		margin-right: 80px;
		margin-top: 50px;
		position: relative;
		img {
			height: 100px;
			width: 150px;
			border: 1px solid;
			border-color: $color-text;
		}
		button {
			width: 110px;
			left: 24px;
			position: absolute;
			top: 41px;
		}
	}
}

.warning {
	h2 {
  		font-size: 25px;
		height: 20px;
		padding-bottom: 30px;
		padding-left: 30px;
		background: url("/extensions/wikia/WikiaLabs/images/cross-24-ns.png") no-repeat scroll 0 0 transparent; /* $wgCdnStylePath */
	}
	.buttons {
		padding-top:20px;
		.okbutton {
			width: 125px;
			margin-left: 4px;
		}
		.cancelbutton {
		    width: 60px;
		}
	}
}

#WikiaPageHeader {
	h1 {
		background: url("/extensions/wikia/WikiaLabs/images/labs.png") no-repeat scroll 0 0 transparent; /* $wgCdnStylePath */
		padding-bottom: 12px;
		padding-left: 44px;
		padding-top: 12px;
	}
	h2 {
		display: none;
	}
}

.feedbackmodal {
	h2 {
		font-size: 18px;
	}
	p {
		line-spacing: 22.5px;
		font-size: 13px;
	}
 	.feedbacktext {
 	 	margin-bottom: 12px;
		height: 100px;
		width: 675px;
 	 	display: block;
 	}

 	.clearfix {
		@include clearfix;
		margin-top: 18px;
 	}

 	.stars {
		display: block;
		font-weight: bold;
		margin-top: 10px;
		ul {
			margin-left: 10px;
			display: inline;
		}
		li {
			margin-right: 10px;
			display: inline;
		}
		img {
			background: url("/extensions/wikia/WikiaLabs/images/star-inactive.png") transparent; /* $wgCdnStylePath */
			height: 18px;
			width: 15px;
			margin-left: -3px;
			background-position: -8px -8px;
			margin-top: -4px;
			vertical-align: middle;
			&.staractive {
				background: url("/extensions/wikia/WikiaLabs/images/star-active.png") transparent; /* $wgCdnStylePath */
				background-position: -8px -8px;
			}
		}
 	}

	.okbutton {
		float: left;
	}

	.comments {
		display: block;
		margin-top: 10px;
		margin-bottom: 5px;
		font-weight: bold;
	}

	.title {
		display: block;
		clear: both;
		font-size: 18px;
		margin-top: 15px;
		margin-bottom: 10px;
		font-weight: bold;
	}

	.appScreen {
		float: left;
		margin-right: $margin-images;
		border-color: $color-text;
		border: 1px solid;
	}

	.prjname {
		margin-bottom: 6px;
		display: block;
		font-size: 20px;
	}

	.data {
		display:none;
	}

	.errorBox {
		background-color: #FFFFCC;
		border: 1px solid $color-page-border;
		display: none;
		margin: 1em 3em 1em 0;
		padding: 6px;
	}
}

