Wikialabs: Link spacing and font-size in Graduates needs to match style guide (bugid:5724)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@37132 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/WikiaLabs/css/wikialabs.scss
+++ b/extensions/wikia/WikiaLabs/css/wikialabs.scss
@@ -2,6 +2,7 @@
 @import "../../../../skins/oasis/css/mixins/gradient";
 @import "../../../../skins/oasis/css/mixins/box-shadow";
 @import "../../../../skins/oasis/css/mixins/clearfix";
+@import "../../../../skins/oasis/css/mixins/bodytext";
 @import "../../../../skins/oasis/css/core/color";
 
 $toolbox-button: 105px;
@@ -189,6 +190,9 @@ $margin-images: 10px;
 				display: block;
 				font-size: 20px;
 				padding-bottom: 3px;
+			}
+			.description {
+        @include bodytext;
 			}
 		}
 	}
